	* Add documentation for NX graphics subsystem

0.4.1 2009-02-06 Gregory Nutt <spudmonkey@racsa.co.cr>
	* Added board support fot the ZiLog ez80Acclaim! ez80f910200zco Development Kit.
	* Fixed several compilation errors in fixed precision math library when built
	  against toolchains that do not support 64-bit type 'long long'.
	* Fix errors in some function prototypes in dirent.h
	* Add eZ80F91 EMAC driver
	* Fix recvfrom() compilation error -- only noted under ZDS
	* Updated all ARM Make.def files to work with gcc 2.4.2 (However, there are
	  still some build issues associated with that toolchain in use of arm-elf-objcopy
	  -- see the TODO.txt list for details)
	* Fix problems with Z16F and eZ80 compilation introduced with recent changes.

0.4.2 2009-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* M16C: Add support for the Renesas M16C MCU and the SKP16C26 StarterKit. However, 
	  the target cannot be built because the GNU m16c-elf-ld link fails with 
	  the following message:

	    m32c-elf-ld: BFD (GNU Binutils) 2.19 assertion fail /home/Owner/projects/nuttx/buildroot/toolchain_build_m32c/binutils-2.19/bfd/elf32-m32c.c:482

	  Where the reference line is:

	    /* If the symbol is out of range for a 16-bit address,
	       we must have allocated a plt entry.  */
	     BFD_ASSERT (*plt_offset != (bfd_vma) -1);

	  No workaround is known at this time.  This is a show stopper for M16C.

	* ez80Acclaim!: Fix interrupt vectors positioning; they were being positioned
	  wrong by 64 bytes (Kevin Franzen).
	* ez80Acclaim!: Corrected some stack handling errors during interrupt handling
	   context save and restore (Kevin Franzen).
	* ez80Acclaim!:Corrected vector intialization logic (Kevin Franzen).
	* ez80Acclaim!: Corrected overflow problem in calculation of baud rate divisor
	* ez80Acclaim!: Fixed GPIO pin configuration get serial output
	* ez80Acclaim!: Correct stack overflow in ostest example configuration


