@@ -1352,8 +1352,9 @@ nuttx-0.4.2 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  wrong by 64 bytes (Kevin Franzen).
 	* ez80Acclaim!: Corrected some stack handling errors during interrupt handling
 	   context save and restore (Kevin Franzen).
-	* ez80Acclaim!:Corrected vector intialization logic (Kevin Franzen).
-	* ez80Acclaim!: Corrected overflow problem in calculation of baud rate divisor
+	* ez80Acclaim!: Corrected vector intialization logic (Kevin Franzen).
+	* ez80Acclaim!: Corrected overflow problem in the calculation of UART baud rate
+	    divisor, the system timer divisor, and the EMAC poll timer.
 	* ez80Acclaim!: Fixed GPIO pin configuration get serial output
 	* ez80Acclaim!: Correct stack overflow in ostest example configuration
 
